# mu

./: .gitignore  Cargo.toml  README.md
assets/: sprite_default.frag  sprite_default.vert  ui_image_default.frag  ui_image_default.vert
examples/: basic.rs  empty_editor.rs  free_look.rs  proto.rs  proto_example.rs  sprite.rs  text_example.rs  texture_quad.rs  triangle.rs  ui_example.rs  window.rs
examples/asset/proto/: test_proto.json
examples/asset/shader/: light_forward.frag  light_forward.shader.json  light_forward.vert  quad.frag  quad.shader.json  quad.vert  triangle.frag  triangle.shader.json  triangle.vert
examples/asset/texture/: close.sheet.json  close.tex.json  kasumi.sheet.json  kasumi.tex.json  landscape.tex.json  metal_box.tex.json  test_grid.sheet.json  test_grid.tex.json
src/: asset.rs  ecs.rs  game_loop.rs  input.rs  lib.rs  math.rs  profile.rs  proto.rs  proto_default.rs  proto_serialize.json  resource.rs  timing.rs  util.rs
src/client/: editor.rs  graph.rs  graphics.rs  input.rs  mod.rs  sprite.rs  text.rs  ui.rs  window.rs
src/client/debug_ui/: mod.rs  perf.rs
src/client/editor/: asset_editor.rs  inspect.rs  inspector.rs  mod.rs
src/util/: mod.rs
