[package]
name = "mu"
version = "0.1.0"
authors = ["weathfold <weathfold@li-dev.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
client = []

[dependencies]
# Generic
#simplelog = "*"
log = "*"
env_logger = "0.7.1"
uuid = { version = "0.8.1", features = ["v4"] }
bytemuck = "1.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

specs = "*"
specs-hierarchy = "0.6"

cgmath = "*"
rand = "*"
image = "*"
futures = "*"

# Client only
winit = "0.22"

wgpu = "0.5"
wgpu-types = { version="0.5", features=["serde"] }

shaderc = "0.6"

wgpu_glyph = "0.9"

imgui = "*"
imgui-winit-support = "*"
imgui-wgpu = "0.8"
