[package]
name = "mu"
version = "0.1.0"
authors = ["weathfold <weathfold@li-dev.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
client = []

[dependencies]
# Generic
#simplelog = "*"
log = "*"
env_logger = "0.7.1"
uuid = { version = "0.8.1", features = ["v4"] }
bytemuck = "1.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

specs = { version = "*", features = ["shred-derive"] }
specs-hierarchy = "0.6"
specs-derive = "0.4.1"

cgmath = { version = "*", features = ["serde", "swizzle"] }
rand = "*"
image = "*"
futures = { version = "*", features = ["thread-pool"] }
strum = "0.19"
strum_macros = "0.19"

# Client only
winit = "0.22"

wgpu = "0.6"
wgpu-types = { version="0.6", features=["serde"] }

shaderc = "0.6"

wgpu_glyph = "0.10"

imgui = "*"
imgui-winit-support = "*"
imgui-wgpu = "0.9"
imgui-inspect = "0.5"
imgui-inspect-derive = "0.5"
