[package]
name = "mu"
version = "0.1.0"
authors = ["weathfold <weathfold@li-dev.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
client = []

[dependencies]
# Generic
#simplelog = "*"
log = "*"
env_logger = "0.7.1"
uuid = { version = "0.8.1", features = ["v4"] }
bytemuck = "1.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

specs = { version = "*", features = ["shred-derive"] }
specs-hierarchy = "0.6"
specs-derive = "0.4.1"

num-traits = "*"
cgmath = { version = "*", features = ["serde", "swizzle"] }
glam = { version = "0.12.0", features = ["bytemuck", "num-traits", "serde"] }

rand = "*"
image = "*"
futures = { version = "*", features = ["thread-pool"] }
strum = "0.19"
strum_macros = "0.19"

# Client only
winit = "0.24"

wgpu = "0.6"
wgpu-types = { version="0.6", features=["serde"] }

shaderc = "0.6"

wgpu_glyph = "0.10"

imgui = "0.6"
imgui-winit-support = "0.6"
imgui-wgpu = "0.12"
imgui-inspect = "0.7"
imgui-inspect-derive = "0.7"
